fix: Fix missing z-index on tag options

--- a/projects/ng-base/base-components/components/tags/tags.component.scss
+++ b/projects/ng-base/base-components/components/tags/tags.component.scss
@@ -8,6 +8,7 @@
   background-color: #fff;
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
   transition: all 0.5s;
+  z-index: 999;
 
   .tag-option-item {
     padding: 10px;
